fixed max-width for title images for even cleaner look on mobile

--- a/assets/CSS/lyrics.css
+++ b/assets/CSS/lyrics.css
@@ -142,3 +142,7 @@ ul.songs li {
     font-size: 70px;
     text-decoration: underline;
 }
+
+#LS-Logo {
+    max-width: 350px;
+}
