--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -52,3 +52,7 @@ body {
 .lead {
     margin: 10px;
 }
+
+#OSM-Logo {
+    max-width: 350px;
+}
